--- a/index.html
+++ b/index.html
@@ -29,35 +29,34 @@
             <!-- <div class="menufix"> -->
             <div class="nav__menu">
                 <ul class="nav__list"></ul>
-                <div class="mmm" align="center">
 
 
-                    <li class="nav__item">
-                        <a href="#home" class="nav__link active-link">
-                            <i class='bx bx-home'></i>
-                        </a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#about" class="nav__link">
-                            <i class='bx bx-user'></i>
-                        </a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#skills" class="nav__link">
-                            <i class='bx bx-book'></i>
-                        </a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#work" class="nav__link">
-                            <i class='bx bx-briefcase-alt-2'></i>
-                        </a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#contact" class="nav__link">
-                            <i class='bx bx-message-square-detail'></i>
-                        </a>
-                    </li>
-                </div>
+                <li class="nav__item">
+                    <a href="#home" class="nav__link active-link">
+                        <i class='bx bx-home'></i>
+                    </a>
+                </li>
+                <li class="nav__item">
+                    <a href="#about" class="nav__link">
+                        <i class='bx bx-user'></i>
+                    </a>
+                </li>
+                <li class="nav__item">
+                    <a href="#skills" class="nav__link">
+                        <i class='bx bx-book'></i>
+                    </a>
+                </li>
+                <li class="nav__item">
+                    <a href="#work" class="nav__link">
+                        <i class='bx bx-briefcase-alt-2'></i>
+                    </a>
+                </li>
+                <li class="nav__item">
+                    <a href="#contact" class="nav__link">
+                        <i class='bx bx-message-square-detail'></i>
+                    </a>
+                </li>
+
             </div>
             <!-- </div> -->
             <!-- theme change button -->
@@ -107,25 +106,27 @@
                         class="home__img">
                 </div>
                 <div class="home__social">
-                    <a href="https://www.linkedin.com/in/a-s-m-radwan-316597155/"  target="_blank" class="home__social-link">
+                    <a href="https://www.linkedin.com/in/a-s-m-radwan-316597155/" target="_blank"
+                        class="home__social-link">
                         <i class='bx bxl-linkedin-square'></i>
                     </a>
-                    <a href="https://github.com/radwanromy"  target="_blank" class="home__social-link">
+                    <a href="https://github.com/radwanromy" target="_blank" class="home__social-link">
                         <i class='bx bxl-github'></i>
                     </a>
-                    <a href="https://www.facebook.com/radwan.romy.100"  target="_blank" class="home__social-link">
+                    <a href="https://www.facebook.com/radwan.romy.100" target="_blank" class="home__social-link">
                         <i class='bx bxl-facebook-circle'></i>
                     </a>
-                    <a href="https://www.instagram.com/radwanromy"  target="_blank" class="home__social-link">
+                    <a href="https://www.instagram.com/radwanromy" target="_blank" class="home__social-link">
                         <i class='bx bxl-instagram-alt'></i>
                     </a>
-                    <a href=""  target="_blank" class="home__social-link">
+                    <a href="" target="_blank" class="home__social-link">
                         <i class='bx bxl-slack'></i>
                     </a>
-                    <a href="https://www.youtube.com/channel/UColDIGGLc7v6E4tZqDEzdXQ"  target="_blank" class="home__social-link">
+                    <a href="https://www.youtube.com/channel/UColDIGGLc7v6E4tZqDEzdXQ" target="_blank"
+                        class="home__social-link">
                         <i class='bx bxl-youtube'></i>
                     </a>
-                    <a href="https://dribbble.com"   target="_blank" class="home__social-link">
+                    <a href="https://dribbble.com" target="_blank" class="home__social-link">
                         <i class='bx bxl-dribbble'></i>
                     </a>
 
@@ -643,7 +644,8 @@
                                 href="https://www.crunchbase.com/person/vijay-koduri?fbclid=IwAR1pfAqjUTZKjmp9lEmneWeZMpuC19Dg9ZGps2Nvt_j3JHbkarDf8btQ5Fs">Vijay
                                 Koduri</a>,Co-Founder of <a
                                 href="https://www.crunchbase.com/organization/sizzle-a845">Sizzle</a> ,USA </h3>
-                        <p class="testimonial__description">本当に良いフリーランサー、プロジェクトのすべての側面は、ステップバイステップで、期待よりも優れている良い結果で続いていた。
+                        <p class="testimonial__description">
+                            本当に良いフリーランサー、プロジェクトのすべての側面は、ステップバイステップで、期待よりも優れている良い結果で続いていた。
                             A really good freelancer, All aspects of the project were
                             followed step by step and with good result which is better than expectation.
                         </p>
