--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
             </ul>
 
             <span class="footer__copy">
-                All Rights Reserved & Copy 2022 - <a href="https://github.com/radwanromy">Radwan Romy</a>
+                無断複写・転載を禁じます2022 - <a href="https://github.com/radwanromy">エス エム レードワン</a>
             </span>
 
         </div>
