--- a/index.html
+++ b/index.html
@@ -510,13 +510,13 @@
             <h1 align="center">ウェブサイトは開発段階にあります!</h1>
             <h1 align="center">The Web Site Is On Going Development Phase!</h1>
 
-            <span class="section__subtitle">My Portfolio</span>
-            <h2 class="section__title">Recent Works</h2>
+            <span class="section__subtitle">私のポートフォリオ</span>
+            <h2 class="section__title">最近の作品</h2>
             <div class="work__filters">
-                <span class="work__item active-work" data-filter='all'>All</span>
-                <span class="work__item" data-filter='.web'>Web</span>
-                <span class="work__item" data-filter='.movil'>Software</span>
-                <span class="work__item" data-filter='.design'>Design</span>
+                <span class="work__item active-work" data-filter='all'>全て</span>
+                <span class="work__item" data-filter='.web'>ウェブ</span>
+                <span class="work__item" data-filter='.movil'>ソフトウェア</span>
+                <span class="work__item" data-filter='.design'>UI/UXデザイン</span>
             </div>
             <div class="work__container container grid">
                 <div class="work__card mix movil">
@@ -689,60 +689,60 @@
 
             <div class="contact__container container grid">
                 <div class="contact__content">
-                    <h3 class="contact__title">Talk to me</h3>
+                    <h3 class="contact__title">話して</h3>
                     <div class="contact__info">
                         <div class="contact__card">
                             <i class='bx bx-mail-send contact__card-icon'></i>
-                            <h3 class="contact__card-title">Email</h3>
-                            <span class="contact__card-data">user@gmail.com</span>
+                            <h3 class="contact__card-title">Eメール</h3>
+                            <span class="contact__card-data">radwanromy@gmail.com</span>
 
                             <a href="mailto:radwanromy@gmail.com" target="_blank" class="contact__button">
-                                Write me <i class='bx bx-right-arrow-alt contact__button-icon'></i>
+                                私に書いて <i class='bx bx-right-arrow-alt contact__button-icon'></i>
                             </a>
                         </div>
 
                         <div class="contact__card">
                             <i class='bx bxl-messenger contact__card-icon'></i>
-                            <h3 class="contact__card-title">Messenger</h3>
+                            <h3 class="contact__card-title">メッセンジャー</h3>
                             <span class="contact__card-data">Radwan Romy</span>
 
                             <a href="https://m.me/radwan.romy.100" target="_blank" class="contact__button">
-                                Write me <i class='bx bx-right-arrow-alt contact__button-icon'></i>
+                                私に書いて <i class='bx bx-right-arrow-alt contact__button-icon'></i>
                             </a>
                         </div>
 
                         <div class="contact__card">
                             <i class='bx bxl-whatsapp contact__card-icon'></i>
-                            <h3 class="contact__card-title">Whatsapp</h3>
+                            <h3 class="contact__card-title">ワッツアップ</h3>
                             <span class="contact__card-data">+8801717799111</span>
 
                             <a href="https://api.whatsapp.com/send?phone=8801717799111&text=Hello, more information!"
                                 target="_blank" class="contact__button">
-                                Write me <i class='bx bx-right-arrow-alt contact__button-icon'></i>
+                                私に書いて <i class='bx bx-right-arrow-alt contact__button-icon'></i>
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="contact__content">
-                    <h3 class="contact__title">Write me your project</h3>
+                    <h3 class="contact__title">私にあなたのプロジェクトを書いてください</h3>
 
                     <form action="" class="contact__form">
                         <div class="contact__form-div">
-                            <label for="" class="contact__form-tag">Name</label>
-                            <input type="text" placeholder="Enter Your Name" class="contact__form-input">
+                            <label for="" class="contact__form-tag">名前</label>
+                            <input type="text" placeholder="あなたの名前を入力してください" class="contact__form-input">
                         </div>
 
                         <div class="contact__form-div">
-                            <label for="" class="contact__form-tag">Email</label>
-                            <input type="email" placeholder="Enter Your Email" class="contact__form-input">
+                            <label for="" class="contact__form-tag">Eメール</label>
+                            <input type="email" placeholder="メールアドレスを入力" class="contact__form-input">
                         </div>
 
                         <div class="contact__form-div contact__form-area">
-                            <label for="" class="contact__form-tag">Project</label>
-                            <textarea name="" id="" cols="30" rows="10" placeholder="Write Your Project Details"
+                            <label for="" class="contact__form-tag">プロジェクト</label>
+                            <textarea name="" id="" cols="30" rows="10" placeholder="プロジェクトの詳細を書く"
                                 class="contact__form-input"></textarea>
                         </div>
-                        <button class="button">Send Message</button>
+                        <button class="button">メッセージの送信</button>
                     </form>
 
                 </div>
@@ -756,13 +756,13 @@
             <h1 class="footer__title">レードワン</h1>
             <ul class="footer__list">
                 <li>
-                    <a href="#about" class="footer__link">About</a>
+                    <a href="#about" class="footer__link">について</a>
                 </li>
                 <li>
-                    <a href="#work" class="footer__link">Projects</a>
+                    <a href="#work" class="footer__link">プロジェクト</a>
                 </li>
                 <li>
-                    <a href="#testimonial" class="footer__link">Testimonial</a>
+                    <a href="#testimonial" class="footer__link">推薦状</a>
                 </li>
 
             </ul>
