--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <span class="section__subtitle">私のイントロ</span>
             <h2 class="section__title">私について</h2>
             <div class="about__container container grid">
-                <div align="center">
+                <div align="center" style="padding-bottom: 200px;">
                     <!-- <object height="350" width="425" class="about__img">
                         <param name="movie" value="https://youtu.be/jUARVMBWEts">
                         <param name="wmode" value="transparent">
@@ -148,7 +148,7 @@
                         </object> -->
 
 
-                    <iframe class="about__imgg" width="340" height="193"
+                    <iframe class="about__imgg" width="340" height="193" 
                         src="https://www.youtube.com/embed/jUARVMBWEts?loop=0">
                     </iframe>
 
@@ -590,6 +590,14 @@
                     <h3 class="work__title">
                         Crystal Community Center</h3>
                     <a href="http://crystalcc.unaux.com/" class="work__button">
+                        Demo <i class='bx bx-right-arrow-alt work__icon'></i>
+                    </a>
+                </div>
+                 <div class="work__card mix design">
+                    <img src="./assets/img/ws2.png" alt="" class="work__img">
+                    <h3 class="work__title">
+                        Upwork Job Sizzle-Blog-2.0</h3>
+                    <a href="https://www.sizzle.gg/blog/" class="work__button">
                         Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
