--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="home__data">
 
                     <span class="home__greeting">もしもし</span>
-                    <h1 class="home__name">私の名前はエー エス エム レードワンです。</h1>
+                    <h1 class="home__name">エー エス エム レードワンです。</h1>
                     <h3 class="home__education">私はフルスタックエンジニアです。</h3>
                     <div class="home__buttons">
 
