--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <!--=============== HEADER ===============-->
     <header class="header" id="header">
-        <nav class="nav container" >
+        <nav class="nav container">
             <a href="#" class="nav__logo">エー エス エム レードワン</a>
             <!-- <div class="menufix"> -->
             <div class="nav__menu">
@@ -104,25 +104,28 @@
                         class="home__img">
                 </div>
                 <div class="home__social">
-                    <a href="https://www.linkedin.com/in/a-s-m-radwan-316597155/"  target="_blank" class="home__social-link">
-                        <i class='bx bxl-linkedin-square'></i>
-                    </a>
-                    <a href="https://github.com/radwanromy"  target="_blank" class="home__social-link">
+                
+                    <a href="https://github.com/radwanromy" target="_blank" class="home__social-link">
                         <i class='bx bxl-github'></i>
                     </a>
-                    <a href="https://www.facebook.com/radwan.romy.100"  target="_blank" class="home__social-link">
+                    <a href="https://www.linkedin.com/in/a-s-m-radwan-316597155/" target="_blank"
+                    class="home__social-link">
+                    <i class='bx bxl-linkedin-square'></i>
+                </a>
+                    <a href="https://www.facebook.com/radwan.romy.100" target="_blank" class="home__social-link">
                         <i class='bx bxl-facebook-circle'></i>
                     </a>
-                    <a href="https://www.instagram.com/radwanromy"  target="_blank" class="home__social-link">
+                    <a href="https://www.instagram.com/radwanromy" target="_blank" class="home__social-link">
                         <i class='bx bxl-instagram-alt'></i>
                     </a>
-                    <a href=""  target="_blank" class="home__social-link">
+                    <a href="" target="_blank" class="home__social-link">
                         <i class='bx bxl-slack'></i>
                     </a>
-                    <a href="https://www.youtube.com/channel/UColDIGGLc7v6E4tZqDEzdXQ"  target="_blank" class="home__social-link">
+                    <a href="https://www.youtube.com/channel/UColDIGGLc7v6E4tZqDEzdXQ" target="_blank"
+                        class="home__social-link">
                         <i class='bx bxl-youtube'></i>
                     </a>
-                    <a href="https://dribbble.com"   target="_blank" class="home__social-link">
+                    <a href="https://dribbble.com" target="_blank" class="home__social-link">
                         <i class='bx bxl-dribbble'></i>
                     </a>
 
@@ -148,7 +151,7 @@
                         </object> -->
 
 
-                    <iframe class="about__imgg" width="340" height="193" 
+                    <iframe class="about__imgg" width="340" height="193"
                         src="https://www.youtube.com/embed/jUARVMBWEts?loop=0">
                     </iframe>
 
@@ -322,8 +325,7 @@
 
         <!--=============== SERVICES ===============-->
         <section class="services section">
-            <h1 align="center">ウェブサイトは開発段階にあります!</h1>
-            <h1 align="center">The Web Site Is On Going Development Phase!</h1>
+
             <span class="section__subtitle">私のサービス</span>
             <h2 class="section__title">私が提供しているもの</h2>
 
@@ -593,7 +595,7 @@
                         Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
-                 <div class="work__card mix design">
+                <div class="work__card mix design">
                     <img src="./assets/img/ws2.png" alt="" class="work__img">
                     <h3 class="work__title">
                         Upwork Job Sizzle-Blog-2.0</h3>
@@ -648,7 +650,8 @@
                                 href="https://www.crunchbase.com/person/vijay-koduri?fbclid=IwAR1pfAqjUTZKjmp9lEmneWeZMpuC19Dg9ZGps2Nvt_j3JHbkarDf8btQ5Fs">Vijay
                                 Koduri</a>,Co-Founder of <a
                                 href="https://www.crunchbase.com/organization/sizzle-a845">Sizzle</a> ,USA </h3>
-                        <p class="testimonial__description">本当に良いフリーランサー、プロジェクトのすべての側面は、ステップバイステップで、期待よりも優れている良い結果で続いていた。
+                        <p class="testimonial__description">
+                            本当に良いフリーランサー、プロジェクトのすべての側面は、ステップバイステップで、期待よりも優れている良い結果で続いていた。
                             A really good freelancer, All aspects of the project were
                             followed step by step and with good result which is better than expectation.
                         </p>
