--- a/index.html
+++ b/index.html
@@ -596,6 +596,15 @@
                     </a>
                 </div>
 
+                <div class="work__card mix design">
+                    <img src="./assets/img/Rday.jfif" alt="" class="work__img">
+                    <h3 class="work__title">
+                        Computer Graphics Project C++</h3>
+                    <a href="https://github.com/radwanromy/Computer-Graphics-Project-Village-View" class="work__button">
+                        Demo <i class='bx bx-right-arrow-alt work__icon'></i>
+                    </a>
+                </div>
+
                 <div class="work__card mix web">
                     <img src="./assets/img/w11.png" alt="" class="work__img">
                     <h3 class="work__title">
