--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
                     <h3 class="work__title">
                         Portal for School/College</h3>
                     <a href="" class="work__button">
-                        Demo <i class='bx bx-right-arrow-alt work__icon'></i>
+                        Demo Link Void <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
 
@@ -659,16 +659,34 @@
                     </a>
                 </div>
 
-                <div class="work__card mix web">
-                    <img src="./assets/img/w9.png" alt="" class="work__img">
+                <div class="work__card mix design">
+                    <img src="./assets/img/Screenshot (487).png" alt="" class="work__img">
                     <h3 class="work__title">
-                        Three.js WebGL 3D websitee</h3>
-                    <a href="https://github.com/radwanromy/Three.js-WebGL-3D-website-project-By-A_S_M_Radwan"
+                        Video-Game-Lua-Love-2D</h3>
+                    <a href="https://github.com/aiubian-edge/Spider-Man-VS-The-LizardVideo-Game-Lua-Love-2D" class="work__button">
+                        Demo <i class='bx bx-right-arrow-alt work__icon'></i>
+                    </a>
+                </div>
+
+                <div class="work__card mix web">
+                    <img src="./assets/img/screencapture-crystalcc-unaux-sciencefreak-2020-10-27-13_35_50.png" alt="" class="work__img">
+                    <h3 class="work__title">
+                        Science Olympiad Quiz Portal</h3>
+                    <a href="http://crystalcc.unaux.com/sciencefreak/"
                         class="work__button">
                         Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
 
+                <div class="work__card mix web">
+                    <img src="./assets/img/screencapture-accwebdev-ezyro-portfolio-cv-templcfbate-2-2021-01-07-01_38_06.png" alt="" class="work__img">
+                    <h3 class="work__title">
+                        Personal Portfolio</h3>
+                    <a href="http://crystalcc.unaux.com/sciencefreak/"
+                        class="work__button">
+                        Demo Link Void <i class='bx bx-right-arrow-alt work__icon'></i>
+                    </a>
+                </div>
 
             </div>
         </section>
