Brief description of the changes

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="home__container container grid">
                 <div class="home__data">
 
-                    <span class="home__greeting">もしもし</span>
+                    <span class="home__greeting">こんにちは</span>
                     <h1 class="home__name">エー エス エム レードワンです。</h1>
                     <h3 class="home__education">私はフルスタックエンジニアです。</h3>
                     <div class="home__buttons">
@@ -164,13 +164,13 @@
                         <div class="about__box">
                             <i class='bx bx-award about__icon'></i>
                             <h3 class="about__title">経験 </h3>
-                            <span class="about__subtitle">ほぼ1年専門的に</span>
+                            <span class="about__subtitle">ほぼ3年半専門的</span>
                         </div>
 
                         <div class="about__box">
                             <i class='bx bx-briefcase-alt about__icon'></i>
                             <h3 class="about__title">完了</h3>
-                            <span class="about__subtitle">70以上 プロジェクト</span>
+                            <span class="about__subtitle">100以上 プロジェクト</span>
                         </div>
 
                         <div class="about__box">
