Brief description of the changes

--- a/index.html
+++ b/index.html
@@ -706,6 +706,15 @@
                 <div class="swiper-wrapper">
 
                     <div class="testimonial__card swiper-slide">
+                        <img src="assets/img/1648100370466 - Copy.jfif" alt="" class="testimonial__img">
+                        <h3 class="testimonial__name">Fujiwara san,
+                            Manager,　Veriserve <a href="Plabon.kumar@bracits.com">Email</a> </h3>
+                        <p class="testimonial__description">
+                            He is master in Linux operations. Linuxオペレーションマスター。</p>
+
+                    </div>
+
+                    <div class="testimonial__card swiper-slide">
                         <img src="assets/img/vvvvCapture.png" alt="" class="testimonial__img">
                         <h3 class="testimonial__name"><a
                                 href="https://www.crunchbase.com/person/vijay-koduri?fbclid=IwAR1pfAqjUTZKjmp9lEmneWeZMpuC19Dg9ZGps2Nvt_j3JHbkarDf8btQ5Fs">Vijay
