Brief description of the changes feedback

--- a/index.html
+++ b/index.html
@@ -706,9 +706,9 @@
                 <div class="swiper-wrapper">
 
                     <div class="testimonial__card swiper-slide">
-                        <img src="assets/img/1648100370466 - Copy.jfif" alt="" class="testimonial__img">
+                        <img src="assets/img/happy-face_4989497.png" alt="" class="testimonial__img">
                         <h3 class="testimonial__name">Fujiwara san,
-                            Manager,　Veriserve <a href="Plabon.kumar@bracits.com">Email</a> </h3>
+                            Former Manager <a href="veriserve">Email</a> </h3>
                         <p class="testimonial__description">
                             He is master in Linux operations. Linuxオペレーションマスター。</p>
 
